Fix centring on small view.

--- a/app/styles/modules/_more-trending.scss
+++ b/app/styles/modules/_more-trending.scss
@@ -20,7 +20,6 @@
   .tile {
     position: relative;
     padding: 25px;
-    margin: 0 25px;
     border-top: solid 5px $highlight-color;
     transition: background-color 0.2s, border-top-color 0.5s;
     border-bottom: 1px solid #E0E2E2;
@@ -32,7 +31,6 @@
 
     @include respond-to(medium) {
       height: 665px;
-      margin: 0;
 
       &:nth-of-type(1) {
         border-right: 1px solid #E0E2E2;
